--- a/.dockerignore
+++ b/.dockerignore
@@ -1,27 +1,14 @@
-**/__pycache__
-**/.venv
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/bin
-**/charts
-**/docker-compose*
-**/compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-LICENSE
-README.md
+Dockerfile
+.vscode
+*.pyc
+*.pyo
+*.pyd
+__pycache__
+.pytest_cache
+.idea
+Text_Generation_using_Tensorflow,_Keras_and_LSTM.ipynb
+search-keywords-cat (old).txt
+text_generation_model(new).h5
+token_new.pkl
+static
+templates
